[gd_scene load_steps=4 format=3 uid="uid://c1cy766or8oyw"]

[ext_resource type="Texture2D" uid="uid://c211daqbhqofq" path="res://Assets/gun.png" id="1_ol4h1"]
[ext_resource type="Texture2D" uid="uid://jnojgxmho324" path="res://Assets/CancelButton.png" id="2_8hnuq"]
[ext_resource type="Script" path="res://Scripts/UI Scripts/tower_ui_display.gd" id="2_cxhsh"]

[node name="TowerInfo" type="Control"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -372.0
offset_top = -298.0
offset_right = -59.0
offset_bottom = 354.0
grow_horizontal = 0
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 99.0
offset_right = 30.0
offset_bottom = -285.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_cxhsh")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TowerName" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
text = "Tower Name"

[node name="CloseTowerInfo" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
icon = ExtResource("2_8hnuq")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="TowerPhoto" type="TextureRect" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
texture = ExtResource("1_ol4h1")
expand_mode = 3
stretch_mode = 5

[node name="TowerCost" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
text = "Cost:"

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TowerLevel" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Tower Level:"

[node name="TowerDamage" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Tower Damage: "

[node name="TowerAttackRate" type="Label" parent="PanelContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Tower Attack Rate:"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer2/CloseTowerInfo" to="PanelContainer" method="_on_close_tower_info_pressed"]
